--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@fullpage/react-fullpage": "^0.1.14",
+    "axios": "^0.19.0",
     "gatsby": "^2.4.3",
     "gatsby-image": "^2.0.41",
     "gatsby-plugin-manifest": "^2.1.1",
@@ -19,8 +21,11 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-fullpage": "^0.1.19",
+    "react-google-maps": "^9.4.5",
     "react-helmet": "^5.2.1",
-    "react-spring": "^8.0.20"
+    "react-spring": "^8.0.20",
+    "recompose": "^0.30.0"
   },
   "devDependencies": {
     "prettier": "^1.17.0"
